@@ -2,6 +2,7 @@ Changelog for Dist::Zilla::PluginBundle::TestingMania
 
 {{$NEXT}}
   - Added another back-compat synonym (Test::EOL)
+  - More robust manifest tests
 
 0.22      2014-04-29
   - Silence NoTabsTests deprecation warnings
